<package format="2">
  <name>tmc_gazebo_plugins</name>
  <version>2.0.0</version>
  <description> Gazebo plugins </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>
  <author>Takafumi Mizuno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tmc_control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>